# postgres_proj

./: .gitignore  README.md  pyproject.toml  sql.sql
postgres_proj/: dbmanager.py  hh_agent.py  main.py
postgres_proj/scripts/: scripts.py
