[tool.poetry]
name = "postgres-proj"
version = "0.1.0"
description = ""
authors = ["Pavel <pashapasha-2013@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
