[tool.poetry]
name = "postgres-proj"
version = "0.1.0"
description = ""
authors = ["Pavel <pashapasha-2013@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
psycopg2 = "^2.9.9"

[tool.poetry.scripts]
get-companies-and-vacancies-count = "scripts.scripts:get_companies_and_vacancies_count"
get-all-vacancies = "scripts.scripts:get_all_vacancies"
get-avg-salary = "scripts.scripts:get_avg_salary"
get-vacancies-with-higher-salary = "scripts.scripts:get_vacancies_with_higher_salary"
get-vacancies-with-keyword = "scripts.scripts:get_vacancies_with_keyword"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
